niri-config/src/snapshots/niri_config__tests__parse_scroll_factor_combined.snap
---
source: niri-config/src/lib.rs
expression: parsed.input.mouse.scroll_factor
---
Some(
    ScrollFactor {
        base: Some(
            FloatOrInt(
                2.0,
            ),
        ),
        horizontal: None,
        vertical: None,
    },
)
