niri-config/src/snapshots/niri_config__tests__parse_scroll_factor_partial-2.snap
---
source: niri-config/src/lib.rs
expression: parsed.input.touchpad.scroll_factor
---
Some(
    ScrollFactor {
        base: None,
        horizontal: None,
        vertical: Some(
            FloatOrInt(
                -1.5,
            ),
        ),
    },
)
