niri-config/src/snapshots/niri_config__tests__parse_scroll_factor_split.snap
---
source: niri-config/src/lib.rs
expression: parsed.input.mouse.scroll_factor
---
Some(
    ScrollFactor {
        base: None,
        horizontal: Some(
            FloatOrInt(
                2.0,
            ),
        ),
        vertical: Some(
            FloatOrInt(
                -1.0,
            ),
        ),
    },
)
