niri-config/src/snapshots/niri_config__tests__scroll_factor_snapshot-2.snap
---
source: niri-config/src/lib.rs
expression: parsed.input.touchpad.scroll_factor
---
Some(
    ScrollFactor {
        base: None,
        horizontal: Some(
            FloatOrInt(
                1.5,
            ),
        ),
        vertical: Some(
            FloatOrInt(
                -1.0,
            ),
        ),
    },
)
